// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Drawer[Base] should render correctly about base 1`] = `
<div
  class="soui-modal soui-modal-wrapper soui-modal-wrapper-animation soui-modal-wrapper-show soui-modal-wrapper-is-mask soui-modal-wrapper-drawer soui-modal-wrapper-drawer-right"
>
  <div
    class="soui-modal-mask"
  >
    <div
      class="soui-modal-panel"
      style="width: 400px;"
    >
      <div
        class="soui-modal-header"
      >
        <div
          class="soui-modal-header-title"
        >
          Drawer Title
        </div>
        <div
          class="soui-modal-header-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 20 20"
          >
            <path
              d="M4.67373 3.51608L4.75224 3.5854L10.0001 8.82138L15.2975 3.5246C15.6229 3.19916 16.1506 3.19916 16.476 3.5246C16.7764 3.825 16.7995 4.29769 16.5453 4.6246L16.476 4.70311L11.1792 10.0005L16.4221 15.2441C16.7475 15.5695 16.7475 16.0972 16.4221 16.4226C16.1217 16.723 15.649 16.7461 15.3221 16.4919L15.2436 16.4226L10.0001 11.1797L4.73436 16.4446C4.40892 16.7701 3.88128 16.7701 3.55585 16.4446C3.25544 16.1442 3.23233 15.6715 3.48652 15.3446L3.55585 15.2661L8.82088 10.0005L3.57373 4.76391C3.24829 4.43847 3.24829 3.91084 3.57373 3.5854C3.87413 3.285 4.34682 3.26189 4.67373 3.51608Z"
            />
          </svg>
        </div>
      </div>
      <div
        class="soui-modal-body"
      >
        you are visited 1
      </div>
      <div
        class="soui-modal-footer"
      >
        <button
          class="soui-button soui-button-secondary soui-button-button soui-button-outline"
          dir="ltr"
          type="button"
        >
          <span>
            Cancel
          </span>
        </button>
        <button
          class="soui-button soui-button-primary soui-button-button"
          dir="ltr"
          type="button"
        >
          <span>
            Ok
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer[Base] should render correctly about close 1`] = `
<div
  class="soui-modal soui-modal-wrapper soui-modal-wrapper-animation soui-modal-wrapper-show soui-modal-wrapper-is-mask soui-modal-wrapper-drawer soui-modal-wrapper-drawer-right"
>
  <div
    class="soui-modal-mask"
  >
    <div
      class="soui-modal-panel"
      style="width: 400px;"
    >
      <div
        class="soui-modal-header"
      >
        <div
          class="soui-modal-header-title"
        >
          Modal Title
        </div>
      </div>
      <div
        class="soui-modal-body"
      >
        The prop maskCloseAble is  
        false
        .
        <br />
        You must click the button to close the Modal.
      </div>
      <div
        class="soui-modal-footer"
      >
        <button
          class="soui-button soui-button-secondary soui-button-button soui-button-outline"
          dir="ltr"
          type="button"
        >
          <span>
            Close
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer[Base] should render correctly about container 1`] = `
<div
  class="soui-modal soui-modal-wrapper soui-modal-wrapper-animation soui-modal-wrapper-show soui-modal-wrapper-is-mask soui-modal-wrapper-drawer soui-modal-wrapper-drawer-right"
>
  <div
    class="soui-modal-mask"
  >
    <div
      class="soui-modal-panel"
      style="width: 400px;"
    >
      <div
        class="soui-modal-header"
      >
        <div
          class="soui-modal-header-title"
        >
          Drawer Title
        </div>
        <div
          class="soui-modal-header-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 20 20"
          >
            <path
              d="M4.67373 3.51608L4.75224 3.5854L10.0001 8.82138L15.2975 3.5246C15.6229 3.19916 16.1506 3.19916 16.476 3.5246C16.7764 3.825 16.7995 4.29769 16.5453 4.6246L16.476 4.70311L11.1792 10.0005L16.4221 15.2441C16.7475 15.5695 16.7475 16.0972 16.4221 16.4226C16.1217 16.723 15.649 16.7461 15.3221 16.4919L15.2436 16.4226L10.0001 11.1797L4.73436 16.4446C4.40892 16.7701 3.88128 16.7701 3.55585 16.4446C3.25544 16.1442 3.23233 15.6715 3.48652 15.3446L3.55585 15.2661L8.82088 10.0005L3.57373 4.76391C3.24829 4.43847 3.24829 3.91084 3.57373 3.5854C3.87413 3.285 4.34682 3.26189 4.67373 3.51608Z"
            />
          </svg>
        </div>
      </div>
      <div
        class="soui-modal-body"
      >
        Drawer mount after Button
      </div>
      <div
        class="soui-modal-footer"
      >
        <button
          class="soui-button soui-button-secondary soui-button-button soui-button-outline"
          dir="ltr"
          type="button"
        >
          <span>
            Cancel
          </span>
        </button>
        <button
          class="soui-button soui-button-primary soui-button-button"
          dir="ltr"
          type="button"
        >
          <span>
            Ok
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer[Base] should render correctly about form 1`] = `
<div
  class="soui-modal soui-modal-wrapper soui-modal-wrapper-animation soui-modal-wrapper-show soui-modal-wrapper-is-mask soui-modal-wrapper-drawer soui-modal-wrapper-drawer-right"
>
  <div
    class="soui-modal-mask"
  >
    <div
      class="soui-modal-panel"
      style="width: 456px;"
    >
      <div
        class="soui-modal-header"
      >
        <div
          class="soui-modal-header-title"
        >
          Form
        </div>
        <div
          class="soui-modal-header-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 20 20"
          >
            <path
              d="M4.67373 3.51608L4.75224 3.5854L10.0001 8.82138L15.2975 3.5246C15.6229 3.19916 16.1506 3.19916 16.476 3.5246C16.7764 3.825 16.7995 4.29769 16.5453 4.6246L16.476 4.70311L11.1792 10.0005L16.4221 15.2441C16.7475 15.5695 16.7475 16.0972 16.4221 16.4226C16.1217 16.723 15.649 16.7461 15.3221 16.4919L15.2436 16.4226L10.0001 11.1797L4.73436 16.4446C4.40892 16.7701 3.88128 16.7701 3.55585 16.4446C3.25544 16.1442 3.23233 15.6715 3.48652 15.3446L3.55585 15.2661L8.82088 10.0005L3.57373 4.76391C3.24829 4.43847 3.24829 3.91084 3.57373 3.5854C3.87413 3.285 4.34682 3.26189 4.67373 3.51608Z"
            />
          </svg>
        </div>
      </div>
      <div
        class="soui-modal-body"
      >
        <form
          class="soui-form soui-form-wrapper"
        >
          <div
            class="soui-form-item-wrapper soui-form-item-wrapper-required"
            data-soui-status="default"
          >
            <div
              class="soui-form-item-label"
              style="width: 85px;"
            >
              Email
            </div>
            <div
              class="soui-form-item-control"
              data-soui-role="form-control"
            >
              <div
                class="soui-input soui-input-wrapper"
                data-soui-input-border="true"
              >
                <div
                  class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
                >
                  <input
                    class="soui-input-input"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="soui-form-item-wrapper soui-form-item-wrapper-required"
            data-soui-status="default"
          >
            <div
              class="soui-form-item-label"
              style="width: 85px;"
            >
              Password
            </div>
            <div
              class="soui-form-item-control"
              data-soui-role="form-control"
            >
              <div
                class="soui-input soui-input-wrapper"
                data-soui-input-border="true"
              >
                <div
                  class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
                >
                  <input
                    class="soui-input-input"
                    type="password"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="soui-modal-footer"
      >
        <div>
          <button
            class="soui-button soui-button-secondary soui-button-button soui-button-outline"
            dir="ltr"
            type="button"
          >
            <span>
              Cancel
            </span>
          </button>
          <button
            class="soui-button soui-button-primary soui-button-button"
            dir="ltr"
            type="button"
          >
            <span>
              Submit
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer[Base] should render correctly about full screen 1`] = `
<div
  class="soui-modal soui-modal-wrapper soui-modal-wrapper-animation soui-modal-wrapper-show soui-modal-wrapper-is-mask soui-modal-wrapper-full-screen soui-modal-wrapper-drawer soui-modal-wrapper-drawer-right"
>
  <div
    class="soui-modal-mask"
  >
    <div
      class="soui-modal-panel"
    >
      <div
        class="soui-modal-header"
      >
        <div
          class="soui-modal-header-title"
        >
          Profile
        </div>
        <div
          class="soui-modal-header-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 20 20"
          >
            <path
              d="M4.67373 3.51608L4.75224 3.5854L10.0001 8.82138L15.2975 3.5246C15.6229 3.19916 16.1506 3.19916 16.476 3.5246C16.7764 3.825 16.7995 4.29769 16.5453 4.6246L16.476 4.70311L11.1792 10.0005L16.4221 15.2441C16.7475 15.5695 16.7475 16.0972 16.4221 16.4226C16.1217 16.723 15.649 16.7461 15.3221 16.4919L15.2436 16.4226L10.0001 11.1797L4.73436 16.4446C4.40892 16.7701 3.88128 16.7701 3.55585 16.4446C3.25544 16.1442 3.23233 15.6715 3.48652 15.3446L3.55585 15.2661L8.82088 10.0005L3.57373 4.76391C3.24829 4.43847 3.24829 3.91084 3.57373 3.5854C3.87413 3.285 4.34682 3.26189 4.67373 3.51608Z"
            />
          </svg>
        </div>
      </div>
      <div
        class="soui-modal-body"
      >
        <div>
          <form
            class="soui-form soui-form-wrapper"
          >
            <div
              class="soui-form-item-wrapper"
              data-soui-status="default"
            >
              <div
                class="soui-form-item-label"
              >
                Name
              </div>
              <div
                class="soui-form-item-control"
                data-soui-role="form-control"
              >
                <div
                  class="soui-input soui-input-wrapper"
                  data-soui-input-border="true"
                >
                  <div
                    class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
                  >
                    <input
                      class="soui-input-input"
                      placeholder="please input name"
                      value="zhangsan"
                    />
                    <div
                      class="soui-input-clear-wrapper"
                    >
                      <span
                        class="soui-input-clear"
                        dir="ltr"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1ZM9.7845 8.38125C9.39221 8.07623 8.82498 8.10396 8.46449 8.46444C8.07397 8.85497 8.07397 9.48813 8.46449 9.87866L10.5846 11.9995L8.46449 14.1213L8.3813 14.2155C8.07628 14.6078 8.10401 15.175 8.46449 15.5355C8.85502 15.926 9.48818 15.926 9.87871 15.5355L11.9996 13.4136L14.1213 15.5355L14.2156 15.6187C14.6078 15.9237 15.1751 15.896 15.5356 15.5355C15.9261 15.145 15.9261 14.5118 15.5356 14.1213L13.4136 11.9995L15.5356 9.87866L15.6187 9.78445C15.9238 9.39216 15.896 8.82493 15.5356 8.46444C15.145 8.07392 14.5119 8.07392 14.1213 8.46444L11.9996 10.5845L9.87871 8.46444L9.7845 8.38125Z"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="soui-form-item-wrapper"
              data-soui-status="default"
            >
              <div
                class="soui-form-item-label"
              >
                Password
              </div>
              <div
                class="soui-form-item-control"
                data-soui-role="form-control"
              >
                <div
                  class="soui-input soui-input-wrapper"
                  data-soui-input-border="true"
                >
                  <div
                    class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
                  >
                    <input
                      class="soui-input-input"
                      placeholder="please input password"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="soui-form-item-wrapper"
              data-soui-status="default"
            >
              <div
                class="soui-form-item-label"
              >
                Email
              </div>
              <div
                class="soui-form-item-control"
                data-soui-role="form-control"
              >
                <div
                  class="soui-input soui-input-wrapper"
                  data-soui-input-border="true"
                >
                  <div
                    class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
                  >
                    <input
                      class="soui-input-input"
                      placeholder="please input email"
                      value="zhangsan@qq.com"
                    />
                    <div
                      class="soui-input-clear-wrapper"
                    >
                      <span
                        class="soui-input-clear"
                        dir="ltr"
                      >
                        <svg
                          aria-hidden="true"
                          fill="currentColor"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1ZM9.7845 8.38125C9.39221 8.07623 8.82498 8.10396 8.46449 8.46444C8.07397 8.85497 8.07397 9.48813 8.46449 9.87866L10.5846 11.9995L8.46449 14.1213L8.3813 14.2155C8.07628 14.6078 8.10401 15.175 8.46449 15.5355C8.85502 15.926 9.48818 15.926 9.87871 15.5355L11.9996 13.4136L14.1213 15.5355L14.2156 15.6187C14.6078 15.9237 15.1751 15.896 15.5356 15.5355C15.9261 15.145 15.9261 14.5118 15.5356 14.1213L13.4136 11.9995L15.5356 9.87866L15.6187 9.78445C15.9238 9.39216 15.896 8.82493 15.5356 8.46444C15.145 8.07392 14.5119 8.07392 14.1213 8.46444L11.9996 10.5845L9.87871 8.46444L9.7845 8.38125Z"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="soui-form-item-wrapper"
              data-soui-status="default"
            >
              <div
                class="soui-form-item-label"
              >
                Gendar
              </div>
              <div
                class="soui-form-item-control"
                data-soui-role="form-control"
              >
                <div
                  class="soui-radio-group"
                >
                  <div
                    class="soui-radio soui-radio-wrapper"
                  >
                    <input
                      style="display: none;"
                      tabindex="0"
                      type="radio"
                    />
                    <span
                      class="soui-radio-indicator-wrapper"
                    >
                      <span
                        class="soui-radio-indicator"
                        tabindex="1"
                      />
                    </span>
                    <span
                      class="soui-radio-desc"
                    >
                      male
                    </span>
                  </div>
                  <div
                    class="soui-radio soui-radio-wrapper"
                  >
                    <input
                      style="display: none;"
                      tabindex="0"
                      type="radio"
                    />
                    <span
                      class="soui-radio-indicator-wrapper"
                    >
                      <span
                        class="soui-radio-indicator"
                        tabindex="1"
                      />
                    </span>
                    <span
                      class="soui-radio-desc"
                    >
                      female
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="soui-form-item-wrapper"
              data-soui-status="default"
            >
              <div
                class="soui-form-item-label"
              >
                Course
              </div>
              <div
                class="soui-form-item-control"
                data-soui-role="form-control"
              >
                <div
                  class="soui-checkbox-group"
                >
                  <div
                    class="soui-checkbox soui-checkbox-wrapper"
                  >
                    <input
                      style="display: none;"
                      tabindex="0"
                      type="checkbox"
                    />
                    <span
                      class="soui-checkbox-indicator-wrapper"
                    >
                      <i
                        class="soui-checkbox-indicator"
                        data-soui-role="checkbox-indicator"
                        tabindex="1"
                      />
                    </span>
                    <span
                      class="soui-checkbox-desc"
                      data-soui-role="desc"
                    >
                      chinese
                    </span>
                  </div>
                  <div
                    class="soui-checkbox soui-checkbox-wrapper"
                  >
                    <input
                      style="display: none;"
                      tabindex="0"
                      type="checkbox"
                    />
                    <span
                      class="soui-checkbox-indicator-wrapper"
                    >
                      <i
                        class="soui-checkbox-indicator"
                        data-soui-role="checkbox-indicator"
                        tabindex="1"
                      />
                    </span>
                    <span
                      class="soui-checkbox-desc"
                      data-soui-role="desc"
                    >
                      maths
                    </span>
                  </div>
                  <div
                    class="soui-checkbox soui-checkbox-wrapper"
                  >
                    <input
                      style="display: none;"
                      tabindex="0"
                      type="checkbox"
                    />
                    <span
                      class="soui-checkbox-indicator-wrapper"
                    >
                      <i
                        class="soui-checkbox-indicator"
                        data-soui-role="checkbox-indicator"
                        tabindex="1"
                      />
                    </span>
                    <span
                      class="soui-checkbox-desc"
                      data-soui-role="desc"
                    >
                      english
                    </span>
                  </div>
                  <div
                    class="soui-checkbox soui-checkbox-wrapper"
                  >
                    <input
                      style="display: none;"
                      tabindex="0"
                      type="checkbox"
                    />
                    <span
                      class="soui-checkbox-indicator-wrapper"
                    >
                      <i
                        class="soui-checkbox-indicator"
                        data-soui-role="checkbox-indicator"
                        tabindex="1"
                      />
                    </span>
                    <span
                      class="soui-checkbox-desc"
                      data-soui-role="desc"
                    >
                      physics
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="soui-form-item-wrapper"
              data-soui-status="default"
            >
              <div
                class="soui-form-item-label"
              >
                Enrollment date
              </div>
              <div
                class="soui-form-item-control"
                data-soui-role="form-control"
              >
                <div
                  class="soui-date-picker soui-datePicker-wrapper"
                  data-soui-input-border="true"
                  data-soui-type="date"
                >
                  <div
                    class="soui-datePicker-result-wrapper soui-datePicker-wrapper-padding-box soui-datePicker-wrapper-inner-title-top soui-datePicker-wrapper-inner-title-bottom"
                    tabindex="1"
                  >
                    <div
                      class="soui-datePicker-result"
                    >
                      <div
                        class="soui-datePicker-result-text-wrapper"
                      >
                        <div
                          class="soui-datePicker-result-text"
                        >
                          <span
                            class="soui-datePicker-result-text-padding"
                          >
                            <input
                              autocomplete="off"
                              placeholder="please select date"
                              readonly=""
                              value=""
                            />
                          </span>
                          <div
                            class="soui-datePicker-result-text-bg"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="soui-datePicker-icon"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M17 1C17.5523 1 18 1.44772 18 2V3H21C22.1046 3 23 3.89543 23 5V20C23 21.1046 22.1046 22 21 22H3C1.89543 22 1 21.1046 1 20V5C1 3.89543 1.89543 3 3 3H6V2C6 1.44772 6.44772 1 7 1C7.55228 1 8 1.44772 8 2V3H16V2C16 1.44772 16.4477 1 17 1ZM21 10H3V20H21V10ZM7 16C7.82843 16 8.5 16.6716 8.5 17.5C8.5 18.3284 7.82843 19 7 19C6.17157 19 5.5 18.3284 5.5 17.5C5.5 16.6716 6.17157 16 7 16ZM12 16C12.8284 16 13.5 16.6716 13.5 17.5C13.5 18.3284 12.8284 19 12 19C11.1716 19 10.5 18.3284 10.5 17.5C10.5 16.6716 11.1716 16 12 16ZM17 16C17.8284 16 18.5 16.6716 18.5 17.5C18.5 18.3284 17.8284 19 17 19C16.1716 19 15.5 18.3284 15.5 17.5C15.5 16.6716 16.1716 16 17 16ZM7 11C7.82843 11 8.5 11.6716 8.5 12.5C8.5 13.3284 7.82843 14 7 14C6.17157 14 5.5 13.3284 5.5 12.5C5.5 11.6716 6.17157 11 7 11ZM12 11C12.8284 11 13.5 11.6716 13.5 12.5C13.5 13.3284 12.8284 14 12 14C11.1716 14 10.5 13.3284 10.5 12.5C10.5 11.6716 11.1716 11 12 11ZM17 11C17.8284 11 18.5 11.6716 18.5 12.5C18.5 13.3284 17.8284 14 17 14C16.1716 14 15.5 13.3284 15.5 12.5C15.5 11.6716 16.1716 11 17 11ZM6 5H3V8H21V5H18C18 5.55228 17.5523 6 17 6C16.4477 6 16 5.55228 16 5H8C8 5.55228 7.55228 6 7 6C6.44772 6 6 5.55228 6 5Z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="soui-form-item-wrapper"
              data-soui-status="default"
            >
              <div
                class="soui-form-item-label"
              >
                Score
              </div>
              <div
                class="soui-form-item-control"
                data-soui-role="form-control"
              >
                <div
                  class="soui-rate soui-rate-wrapper"
                >
                  <div
                    class="soui-rate-inner"
                  >
                    <div
                      class="soui-rate-item soui-rate-item-checked"
                    >
                      <span
                        class="soui-rate-item-bg"
                      >
                        <svg
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.276 7.825L1.85649 8.7559L1.74278 8.77878C1.00761 8.96968 0.736859 9.90915 1.30093 10.4606L5.953 15.008L4.84231 21.3268L4.82911 21.4327C4.77288 22.2003 5.59415 22.7575 6.29763 22.3824L11.999 19.343L17.7023 22.3825L17.7988 22.4279C18.5105 22.7194 19.2948 22.1128 19.1578 21.3281L18.054 15.008L22.6997 10.46L22.7779 10.3745C23.2586 9.78723 22.9242 8.86973 22.1443 8.75601L15.758 7.825L12.895 2.05544C12.5264 1.31273 11.4661 1.31545 11.1013 2.06004L8.276 7.825Z"
                          />
                        </svg>
                      </span>
                      <span
                        class="soui-rate-item-front"
                      >
                        <svg
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.276 7.825L1.85649 8.7559L1.74278 8.77878C1.00761 8.96968 0.736859 9.90915 1.30093 10.4606L5.953 15.008L4.84231 21.3268L4.82911 21.4327C4.77288 22.2003 5.59415 22.7575 6.29763 22.3824L11.999 19.343L17.7023 22.3825L17.7988 22.4279C18.5105 22.7194 19.2948 22.1128 19.1578 21.3281L18.054 15.008L22.6997 10.46L22.7779 10.3745C23.2586 9.78723 22.9242 8.86973 22.1443 8.75601L15.758 7.825L12.895 2.05544C12.5264 1.31273 11.4661 1.31545 11.1013 2.06004L8.276 7.825Z"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="soui-rate-item soui-rate-item-checked"
                    >
                      <span
                        class="soui-rate-item-bg"
                      >
                        <svg
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.276 7.825L1.85649 8.7559L1.74278 8.77878C1.00761 8.96968 0.736859 9.90915 1.30093 10.4606L5.953 15.008L4.84231 21.3268L4.82911 21.4327C4.77288 22.2003 5.59415 22.7575 6.29763 22.3824L11.999 19.343L17.7023 22.3825L17.7988 22.4279C18.5105 22.7194 19.2948 22.1128 19.1578 21.3281L18.054 15.008L22.6997 10.46L22.7779 10.3745C23.2586 9.78723 22.9242 8.86973 22.1443 8.75601L15.758 7.825L12.895 2.05544C12.5264 1.31273 11.4661 1.31545 11.1013 2.06004L8.276 7.825Z"
                          />
                        </svg>
                      </span>
                      <span
                        class="soui-rate-item-front"
                      >
                        <svg
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.276 7.825L1.85649 8.7559L1.74278 8.77878C1.00761 8.96968 0.736859 9.90915 1.30093 10.4606L5.953 15.008L4.84231 21.3268L4.82911 21.4327C4.77288 22.2003 5.59415 22.7575 6.29763 22.3824L11.999 19.343L17.7023 22.3825L17.7988 22.4279C18.5105 22.7194 19.2948 22.1128 19.1578 21.3281L18.054 15.008L22.6997 10.46L22.7779 10.3745C23.2586 9.78723 22.9242 8.86973 22.1443 8.75601L15.758 7.825L12.895 2.05544C12.5264 1.31273 11.4661 1.31545 11.1013 2.06004L8.276 7.825Z"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="soui-rate-item soui-rate-item-checked"
                    >
                      <span
                        class="soui-rate-item-bg"
                      >
                        <svg
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.276 7.825L1.85649 8.7559L1.74278 8.77878C1.00761 8.96968 0.736859 9.90915 1.30093 10.4606L5.953 15.008L4.84231 21.3268L4.82911 21.4327C4.77288 22.2003 5.59415 22.7575 6.29763 22.3824L11.999 19.343L17.7023 22.3825L17.7988 22.4279C18.5105 22.7194 19.2948 22.1128 19.1578 21.3281L18.054 15.008L22.6997 10.46L22.7779 10.3745C23.2586 9.78723 22.9242 8.86973 22.1443 8.75601L15.758 7.825L12.895 2.05544C12.5264 1.31273 11.4661 1.31545 11.1013 2.06004L8.276 7.825Z"
                          />
                        </svg>
                      </span>
                      <span
                        class="soui-rate-item-front"
                      >
                        <svg
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.276 7.825L1.85649 8.7559L1.74278 8.77878C1.00761 8.96968 0.736859 9.90915 1.30093 10.4606L5.953 15.008L4.84231 21.3268L4.82911 21.4327C4.77288 22.2003 5.59415 22.7575 6.29763 22.3824L11.999 19.343L17.7023 22.3825L17.7988 22.4279C18.5105 22.7194 19.2948 22.1128 19.1578 21.3281L18.054 15.008L22.6997 10.46L22.7779 10.3745C23.2586 9.78723 22.9242 8.86973 22.1443 8.75601L15.758 7.825L12.895 2.05544C12.5264 1.31273 11.4661 1.31545 11.1013 2.06004L8.276 7.825Z"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="soui-rate-item"
                    >
                      <span
                        class="soui-rate-item-bg"
                      >
                        <svg
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.276 7.825L1.85649 8.7559L1.74278 8.77878C1.00761 8.96968 0.736859 9.90915 1.30093 10.4606L5.953 15.008L4.84231 21.3268L4.82911 21.4327C4.77288 22.2003 5.59415 22.7575 6.29763 22.3824L11.999 19.343L17.7023 22.3825L17.7988 22.4279C18.5105 22.7194 19.2948 22.1128 19.1578 21.3281L18.054 15.008L22.6997 10.46L22.7779 10.3745C23.2586 9.78723 22.9242 8.86973 22.1443 8.75601L15.758 7.825L12.895 2.05544C12.5264 1.31273 11.4661 1.31545 11.1013 2.06004L8.276 7.825Z"
                          />
                        </svg>
                      </span>
                      <span
                        class="soui-rate-item-front"
                      >
                        <svg
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.276 7.825L1.85649 8.7559L1.74278 8.77878C1.00761 8.96968 0.736859 9.90915 1.30093 10.4606L5.953 15.008L4.84231 21.3268L4.82911 21.4327C4.77288 22.2003 5.59415 22.7575 6.29763 22.3824L11.999 19.343L17.7023 22.3825L17.7988 22.4279C18.5105 22.7194 19.2948 22.1128 19.1578 21.3281L18.054 15.008L22.6997 10.46L22.7779 10.3745C23.2586 9.78723 22.9242 8.86973 22.1443 8.75601L15.758 7.825L12.895 2.05544C12.5264 1.31273 11.4661 1.31545 11.1013 2.06004L8.276 7.825Z"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="soui-rate-item"
                    >
                      <span
                        class="soui-rate-item-bg"
                      >
                        <svg
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.276 7.825L1.85649 8.7559L1.74278 8.77878C1.00761 8.96968 0.736859 9.90915 1.30093 10.4606L5.953 15.008L4.84231 21.3268L4.82911 21.4327C4.77288 22.2003 5.59415 22.7575 6.29763 22.3824L11.999 19.343L17.7023 22.3825L17.7988 22.4279C18.5105 22.7194 19.2948 22.1128 19.1578 21.3281L18.054 15.008L22.6997 10.46L22.7779 10.3745C23.2586 9.78723 22.9242 8.86973 22.1443 8.75601L15.758 7.825L12.895 2.05544C12.5264 1.31273 11.4661 1.31545 11.1013 2.06004L8.276 7.825Z"
                          />
                        </svg>
                      </span>
                      <span
                        class="soui-rate-item-front"
                      >
                        <svg
                          fill="currentColor"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="M8.276 7.825L1.85649 8.7559L1.74278 8.77878C1.00761 8.96968 0.736859 9.90915 1.30093 10.4606L5.953 15.008L4.84231 21.3268L4.82911 21.4327C4.77288 22.2003 5.59415 22.7575 6.29763 22.3824L11.999 19.343L17.7023 22.3825L17.7988 22.4279C18.5105 22.7194 19.2948 22.1128 19.1578 21.3281L18.054 15.008L22.6997 10.46L22.7779 10.3745C23.2586 9.78723 22.9242 8.86973 22.1443 8.75601L15.758 7.825L12.895 2.05544C12.5264 1.31273 11.4661 1.31545 11.1013 2.06004L8.276 7.825Z"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="soui-form-item-wrapper"
              data-soui-status="default"
            >
              <div
                class="soui-form-item-label"
              >
                upload avatar
              </div>
              <div
                class="soui-form-item-control"
                data-soui-role="form-control"
              >
                <div
                  class="soui-upload soui-upload-wrapper soui-upload-wrapper-image"
                >
                  <span
                    class="soui-upload-image-handler"
                    style="width: 80px; height: 80px;"
                  >
                    <div
                      class="soui-upload-image-handler-icon"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M12.0317 4C12.5445 4.00067 12.9667 4.38727 13.0238 4.88468L13.0303 5.00131L13.022 11H19C19.5523 11 20 11.4477 20 12C20 12.5128 19.614 12.9355 19.1166 12.9933L19 13H13.02L13.012 19.0013C13.0113 19.5536 12.563 20.0007 12.0107 20C11.4979 19.9993 11.0757 19.6127 11.0186 19.1153L11.012 18.9987L11.02 13H5C4.44772 13 4 12.5523 4 12C4 11.4872 4.38604 11.0645 4.88338 11.0067L5 11H11.022L11.0304 4.99869C11.0311 4.44641 11.4794 3.99928 12.0317 4Z"
                        />
                      </svg>
                    </div>
                    <input
                      accept="image/*"
                      style="display: none;"
                      type="file"
                    />
                  </span>
                </div>
              </div>
            </div>
            <div
              class="soui-form-item-wrapper"
              data-soui-status="default"
            >
              <div
                class="soui-form-item-label"
              >
                Address
              </div>
              <div
                class="soui-form-item-control"
                data-soui-role="form-control"
              >
                <div
                  class="soui-textarea soui-textarea-wrapper"
                  data-soui-input-border="true"
                >
                  <textarea
                    class="soui-textarea-wrapper-padding-box soui-textarea-wrapper-inner-title-bottom soui-textarea-textarea"
                    rows="4"
                  />
                </div>
              </div>
            </div>
            <div
              class="soui-form-item-wrapper"
              data-soui-status="default"
              style="margin-top: 32px; margin-bottom: 0px;"
            >
              <div
                class="soui-form-item-label"
              />
              <div
                class="soui-form-item-control"
                data-soui-role="form-control"
              >
                <button
                  class="soui-button soui-button-primary soui-button-button"
                  dir="ltr"
                  type="submit"
                >
                  <span>
                    Submit
                  </span>
                </button>
                <button
                  class="soui-button soui-button-secondary soui-button-button"
                  dir="ltr"
                  type="reset"
                >
                  <span>
                    Reset
                  </span>
                </button>
              </div>
            </div>
          </form>
        </div>
      </div>
      <div
        class="soui-modal-footer"
      >
        <button
          class="soui-button soui-button-primary soui-button-button"
          dir="ltr"
          type="button"
        >
          <span>
            OK
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer[Base] should render correctly about hide mask 1`] = `
<div
  class="soui-modal soui-modal-wrapper soui-modal-wrapper-animation soui-modal-wrapper-show soui-modal-wrapper-is-mask soui-modal-wrapper-hide-mask soui-modal-wrapper-drawer soui-modal-wrapper-drawer-right"
>
  <div
    class="soui-modal-mask"
  >
    <div
      class="soui-modal-panel"
      style="width: 400px;"
    >
      <div
        class="soui-modal-header"
      >
        <div
          class="soui-modal-header-title"
        >
          Drawer Title
        </div>
        <div
          class="soui-modal-header-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 20 20"
          >
            <path
              d="M4.67373 3.51608L4.75224 3.5854L10.0001 8.82138L15.2975 3.5246C15.6229 3.19916 16.1506 3.19916 16.476 3.5246C16.7764 3.825 16.7995 4.29769 16.5453 4.6246L16.476 4.70311L11.1792 10.0005L16.4221 15.2441C16.7475 15.5695 16.7475 16.0972 16.4221 16.4226C16.1217 16.723 15.649 16.7461 15.3221 16.4919L15.2436 16.4226L10.0001 11.1797L4.73436 16.4446C4.40892 16.7701 3.88128 16.7701 3.55585 16.4446C3.25544 16.1442 3.23233 15.6715 3.48652 15.3446L3.55585 15.2661L8.82088 10.0005L3.57373 4.76391C3.24829 4.43847 3.24829 3.91084 3.57373 3.5854C3.87413 3.285 4.34682 3.26189 4.67373 3.51608Z"
            />
          </svg>
        </div>
      </div>
      <div
        class="soui-modal-body"
      >
        you are visited 1
      </div>
      <div
        class="soui-modal-footer"
      >
        <button
          class="soui-button soui-button-secondary soui-button-button soui-button-outline"
          dir="ltr"
          type="button"
        >
          <span>
            Cancel
          </span>
        </button>
        <button
          class="soui-button soui-button-primary soui-button-button"
          dir="ltr"
          type="button"
        >
          <span>
            Ok
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer[Base] should render correctly about position 1`] = `
<div
  class="soui-modal soui-modal-wrapper soui-modal-wrapper-animation soui-modal-wrapper-show soui-modal-wrapper-is-mask soui-modal-wrapper-drawer soui-modal-wrapper-drawer-right"
>
  <div
    class="soui-modal-mask"
  >
    <div
      class="soui-modal-panel"
      style="width: auto;"
    >
      <div
        class="soui-modal-header"
      >
        <div
          class="soui-modal-header-title"
        >
          Form
        </div>
        <div
          class="soui-modal-header-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 20 20"
          >
            <path
              d="M4.67373 3.51608L4.75224 3.5854L10.0001 8.82138L15.2975 3.5246C15.6229 3.19916 16.1506 3.19916 16.476 3.5246C16.7764 3.825 16.7995 4.29769 16.5453 4.6246L16.476 4.70311L11.1792 10.0005L16.4221 15.2441C16.7475 15.5695 16.7475 16.0972 16.4221 16.4226C16.1217 16.723 15.649 16.7461 15.3221 16.4919L15.2436 16.4226L10.0001 11.1797L4.73436 16.4446C4.40892 16.7701 3.88128 16.7701 3.55585 16.4446C3.25544 16.1442 3.23233 15.6715 3.48652 15.3446L3.55585 15.2661L8.82088 10.0005L3.57373 4.76391C3.24829 4.43847 3.24829 3.91084 3.57373 3.5854C3.87413 3.285 4.34682 3.26189 4.67373 3.51608Z"
            />
          </svg>
        </div>
      </div>
      <div
        class="soui-modal-body"
      >
        <form
          class="soui-form soui-form-wrapper"
          style="width: 500px;"
        >
          <div
            class="soui-form-item-wrapper soui-form-item-wrapper-required"
            data-soui-status="default"
          >
            <div
              class="soui-form-item-label"
              style="width: 100px;"
            >
              Email
            </div>
            <div
              class="soui-form-item-control"
              data-soui-role="form-control"
            >
              <div
                class="soui-input soui-input-wrapper"
                data-soui-input-border="true"
              >
                <div
                  class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
                >
                  <input
                    class="soui-input-input"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="soui-form-item-wrapper soui-form-item-wrapper-required"
            data-soui-status="default"
          >
            <div
              class="soui-form-item-label"
              style="width: 100px;"
            >
              Password
            </div>
            <div
              class="soui-form-item-control"
              data-soui-role="form-control"
            >
              <div
                class="soui-input soui-input-wrapper"
                data-soui-input-border="true"
              >
                <div
                  class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
                >
                  <input
                    class="soui-input-input"
                    type="password"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="soui-modal-footer"
      >
        <div>
          <button
            class="soui-button soui-button-secondary soui-button-button soui-button-outline"
            dir="ltr"
            type="button"
          >
            <span>
              Cancel
            </span>
          </button>
          <button
            class="soui-button soui-button-primary soui-button-button"
            dir="ltr"
            type="button"
          >
            <span>
              Submit
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Drawer[Base] should render correctly about resizable 1`] = `
<div
  class="soui-modal soui-modal-wrapper soui-modal-wrapper-animation soui-modal-wrapper-show soui-modal-wrapper-is-mask soui-modal-wrapper-drawer soui-modal-wrapper-drawer-right"
>
  <div
    class="soui-modal-mask"
  >
    <div
      class="soui-modal-panel"
      style="width: auto;"
    >
      <div
        class="soui-modal-header"
      >
        <div
          class="soui-modal-header-title"
        >
          Form
        </div>
        <div
          class="soui-modal-header-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 20 20"
          >
            <path
              d="M4.67373 3.51608L4.75224 3.5854L10.0001 8.82138L15.2975 3.5246C15.6229 3.19916 16.1506 3.19916 16.476 3.5246C16.7764 3.825 16.7995 4.29769 16.5453 4.6246L16.476 4.70311L11.1792 10.0005L16.4221 15.2441C16.7475 15.5695 16.7475 16.0972 16.4221 16.4226C16.1217 16.723 15.649 16.7461 15.3221 16.4919L15.2436 16.4226L10.0001 11.1797L4.73436 16.4446C4.40892 16.7701 3.88128 16.7701 3.55585 16.4446C3.25544 16.1442 3.23233 15.6715 3.48652 15.3446L3.55585 15.2661L8.82088 10.0005L3.57373 4.76391C3.24829 4.43847 3.24829 3.91084 3.57373 3.5854C3.87413 3.285 4.34682 3.26189 4.67373 3.51608Z"
            />
          </svg>
        </div>
      </div>
      <div
        class="soui-modal-body"
      >
        <form
          class="soui-form soui-form-wrapper"
          style="width: 500px;"
        >
          <div
            class="soui-form-item-wrapper soui-form-item-wrapper-required"
            data-soui-status="default"
          >
            <div
              class="soui-form-item-label"
              style="width: 100px;"
            >
              Email
            </div>
            <div
              class="soui-form-item-control"
              data-soui-role="form-control"
            >
              <div
                class="soui-input soui-input-wrapper"
                data-soui-input-border="true"
              >
                <div
                  class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
                >
                  <input
                    class="soui-input-input"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="soui-form-item-wrapper soui-form-item-wrapper-required"
            data-soui-status="default"
          >
            <div
              class="soui-form-item-label"
              style="width: 100px;"
            >
              Password
            </div>
            <div
              class="soui-form-item-control"
              data-soui-role="form-control"
            >
              <div
                class="soui-input soui-input-wrapper"
                data-soui-input-border="true"
              >
                <div
                  class="soui-input-wrapper-inner-title-top soui-input-wrapper-inner-title-bottom soui-input-wrapper-padding-box soui-input-content"
                >
                  <input
                    class="soui-input-input"
                    type="password"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
      <div
        class="soui-modal-footer"
      >
        <div>
          <button
            class="soui-button soui-button-secondary soui-button-button soui-button-outline"
            dir="ltr"
            type="button"
          >
            <span>
              Cancel
            </span>
          </button>
          <button
            class="soui-button soui-button-primary soui-button-button"
            dir="ltr"
            type="button"
          >
            <span>
              Submit
            </span>
          </button>
        </div>
      </div>
      <div
        class="soui-modal-resize-x"
        data-position="right"
      />
    </div>
  </div>
</div>
`;

exports[`Drawer[Base] should render correctly about type 1`] = `
<div
  class="soui-modal soui-modal-wrapper soui-modal-wrapper-animation soui-modal-wrapper-show soui-modal-wrapper-is-mask soui-modal-wrapper-drawer soui-modal-wrapper-drawer-right"
>
  <div
    class="soui-modal-mask"
  >
    <div
      class="soui-modal-panel"
      style="width: 500px;"
    >
      <div
        class="soui-modal-header"
      >
        <span
          class="soui-modal-header-icon soui-alert-icon soui-alert-success-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 23C5.92487 23 1 18.0751 1 12C1 5.92487 5.92487 1 12 1C18.0751 1 23 5.92487 23 12C23 18.0751 18.0751 23 12 23ZM6.34315 13.8284L8.46305 15.9483C9.24511 16.7304 10.5122 16.7304 11.2943 15.9483L17.6569 9.58579C18.0472 9.19546 18.0472 8.5619 17.6569 8.17157C17.2665 7.78125 16.633 7.78125 16.2426 8.17157L10.5872 13.827C10.1962 14.218 9.56119 14.218 9.17016 13.827L7.75736 12.4142C7.36704 12.0239 6.73347 12.0239 6.34315 12.4142C5.95282 12.8045 5.95282 13.4381 6.34315 13.8284Z"
            />
          </svg>
        </span>
        <div
          class="soui-modal-header-title"
        >
          Drawer Title with success Icon
        </div>
        <div
          class="soui-modal-header-close"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 20 20"
          >
            <path
              d="M4.67373 3.51608L4.75224 3.5854L10.0001 8.82138L15.2975 3.5246C15.6229 3.19916 16.1506 3.19916 16.476 3.5246C16.7764 3.825 16.7995 4.29769 16.5453 4.6246L16.476 4.70311L11.1792 10.0005L16.4221 15.2441C16.7475 15.5695 16.7475 16.0972 16.4221 16.4226C16.1217 16.723 15.649 16.7461 15.3221 16.4919L15.2436 16.4226L10.0001 11.1797L4.73436 16.4446C4.40892 16.7701 3.88128 16.7701 3.55585 16.4446C3.25544 16.1442 3.23233 15.6715 3.48652 15.3446L3.55585 15.2661L8.82088 10.0005L3.57373 4.76391C3.24829 4.43847 3.24829 3.91084 3.57373 3.5854C3.87413 3.285 4.34682 3.26189 4.67373 3.51608Z"
            />
          </svg>
        </div>
      </div>
      <div
        class="soui-modal-body soui-modal-body-with-icon"
      >
        <span>
          Drawer type: 
        </span>
        <b>
          success
        </b>
      </div>
      <div
        class="soui-modal-footer"
      >
        <button
          class="soui-button soui-button-secondary soui-button-button soui-button-outline"
          dir="ltr"
          type="button"
        >
          <span>
            Cancel
          </span>
        </button>
        <button
          class="soui-button soui-button-primary soui-button-button"
          dir="ltr"
          type="button"
        >
          <span>
            Ok
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
